Rename project from videogen to Vidocrisy across all files

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/images/Minocrisy_Banner.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VideoGen - AI Video Generation Platform</title>
-    <meta name="description" content="A personal video generation platform integrating multiple AI video generation services" />
+    <title>Vidocrisy - AI Video Generation Platform</title>
+    <meta name="description" content="A personal video generation platform integrating multiple AI video generation services under the Vidocrisy brand" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
